[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/other/hole.png" type="Texture" id=1]
[ext_resource path="res://props/hole/rabbit_hole/rabbit_hole.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 384.083

[node name="rabbit_hole_1" type="YSort"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.117647, 0.117647, 0.117647, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 0, 16 )

[node name="rabbit_spawn" type="YSort" parent="."]

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource( 1 )

[node name="waiting_load_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="waiting_load_timer" to="." method="_on_waiting_load_timer_timeout"]
